<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            app:titleTextColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="30dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnCropImageActivity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/crop_image_activity"
            android:textColorHint="@color/white"
            app:layout_constraintTop_toTopOf="parent" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnOpenSingleDocumentActivity"
            android:layout_marginTop="10dp"
            android:hint="@string/open_single_document_activity"
            android:textColorHint="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/btnCropImageActivity"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnOpenMultipleDocumentActivity"
            android:layout_marginTop="10dp"
            android:hint="@string/open_multiple_documents_activity"
            android:textColorHint="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/btnOpenSingleDocumentActivity"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnTester"
            android:layout_marginTop="10dp"
            android:hint="@string/tester"
            android:visibility="gone"
            android:textColorHint="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/btnOpenMultipleDocumentActivity"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>