<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="20dp"
    app:cardBackgroundColor="@color/grey_100"
    app:cardCornerRadius="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp">

        <ImageView
            android:id="@+id/ivRemove"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_round_delete_24"
            android:tint="@color/red_300"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/file_path"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/black"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvFilePath"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="@string/file_path"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/grey_800"
            app:layout_constraintTop_toBottomOf="@id/textView1" />

        <Space
            android:id="@+id/space1"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            app:layout_constraintTop_toBottomOf="@id/tvFilePath" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/file_real_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@id/space1" />

        <TextView
            android:id="@+id/tvFileRealName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="@string/file_real_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/grey_800"
            app:layout_constraintTop_toBottomOf="@id/textView2" />


        <Space
            android:id="@+id/space2"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            app:layout_constraintTop_toBottomOf="@id/tvFileRealName" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/file_generate_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@id/space2" />

        <TextView
            android:id="@+id/tvFileGenerateName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="@string/file_generate_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/grey_800"
            app:layout_constraintTop_toBottomOf="@id/textView3" />

        <Space
            android:id="@+id/space3"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            app:layout_constraintTop_toBottomOf="@id/tvFileGenerateName" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/file_size"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@id/space3" />

        <TextView
            android:id="@+id/tvFileSize"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="@string/file_size"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/grey_800"
            app:layout_constraintTop_toBottomOf="@id/textView4" />

        <Space
            android:id="@+id/space4"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            app:layout_constraintTop_toBottomOf="@id/tvFileSize" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/file_mime_type"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@id/space4" />

        <TextView
            android:id="@+id/tvFileMimeType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="@string/file_mime_type"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/grey_800"
            app:layout_constraintTop_toBottomOf="@id/textView5" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>